--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Revin De Castro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Bubbles</title>
     <link rel="stylesheet" href="style.css">
