--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="heart.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="author" content="Revin De Castro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
