--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Revin De Castro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart Bubbles</title>
+    <title>Random</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
